cleaning up Venn testing runner file